Form section alignment fix

--- a/src/pages/Registration.css
+++ b/src/pages/Registration.css
@@ -93,7 +93,7 @@ label {
 
 .formSection {
     width: 50%;
-    margin-left: 2vw;
+    /* margin-left: 2vw; */
 }
 
 .paymentSection {
